src/test/ui/range/issue-54505-no-std.stderr
error: `#[panic_handler]` function required, but not found

error[E0308]: mismatched types
  --> $DIR/issue-54505-no-std.rs:27:16
   |
LL |     take_range(0..1);
   |                ^^^^
   |                |
   |                expected reference, found struct `Range`
   |                help: consider borrowing here: `&(0..1)`
   |
   = note: expected reference `&_`
                 found struct `Range<{integer}>`

error[E0308]: mismatched types
  --> $DIR/issue-54505-no-std.rs:32:16
   |
LL |     take_range(1..);
   |                ^^^
   |                |
   |                expected reference, found struct `RangeFrom`
   |                help: consider borrowing here: `&(1..)`
   |
   = note: expected reference `&_`
                 found struct `RangeFrom<{integer}>`

error[E0308]: mismatched types
  --> $DIR/issue-54505-no-std.rs:37:16
   |
LL |     take_range(..);
   |                ^^
   |                |
   |                expected reference, found struct `RangeFull`
   |                help: consider borrowing here: `&(..)`
   |
   = note: expected reference `&_`
                 found struct `RangeFull`

error[E0308]: mismatched types
  --> $DIR/issue-54505-no-std.rs:42:16
   |
LL |     take_range(0..=1);
   |                ^^^^^
   |                |
   |                expected reference, found struct `RangeInclusive`
   |                help: consider borrowing here: `&(0..=1)`
   |
   = note: expected reference `&_`
                 found struct `RangeInclusive<{integer}>`

error[E0308]: mismatched types
  --> $DIR/issue-54505-no-std.rs:47:16
   |
LL |     take_range(..5);
   |                ^^^
   |                |
   |                expected reference, found struct `RangeTo`
   |                help: consider borrowing here: `&(..5)`
   |
   = note: expected reference `&_`
                 found struct `RangeTo<{integer}>`

error[E0308]: mismatched types
  --> $DIR/issue-54505-no-std.rs:52:16
   |
LL |     take_range(..=42);
   |                ^^^^^
   |                |
   |                expected reference, found struct `RangeToInclusive`
   |                help: consider borrowing here: `&(..=42)`
   |
   = note: expected reference `&_`
                 found struct `RangeToInclusive<{integer}>`

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0308`.
